Provided intro in homepage and link to antdebweb

--- a/index.html
+++ b/index.html
@@ -12,8 +12,87 @@
 	</h1>
 
 	<p>
-		The website for the Antoss organization and all of its projects.
+		The Ant Open Source Software is an organization with the goal of making Free Open Source Software (or FOSS) easily available to everyone, no matter their degree of knowledge or experience.
+		<br>
+		Because what use is having great tools available if only tech experts can use them?
 	</p>
+
+	<h2>
+		What do we do?
+	</h2>
+
+	<h3>
+		For Users
+	</h3>
+
+	<p>
+		Create free open source software that is easy and intuitive to use, with clear documentation for users that want to know more, and that will cover edge cases or questions from the users.
+	</p>
+
+	<p>
+		But making Open Source accessible for everyone doesn't only mean creating software. There already is plenty of Free Open Source Software (FOSS) that is great out there!
+	</p>
+	<p>
+		However, many might be frightened to start using it due to documentation that is not very beginner-friendly or unorganized. So our focus will also be on improving the documentation of great existing software, so anyone can easily understand it or get the answers to their questions.
+	</p>
+	<p>
+		That way, we hope to get more users to try FOSS. After all, there already are a lot of great tools out there. There's no need to replace the greats, just making the transition to using them smooth and easy.
+	</p>
+
+	<h3>
+		For people that want to contribute
+	</h3>
+
+	<p>
+		We get it, who doesn't want to show some appreciation for something they love? But when we tried to help some of our favorite software, we noticed it's not exactly easy. There can be a lot of bureaucratic red tape and barriers to help, and some great possible changes could go against their current rules or structure.
+	</p>
+	<p>
+		While rules and regulations have a place in implementing software, documentation and guides are something that benefits most from new users and the input of people that aren't tech savvy. How else would you know what's driving users away if they don't have a platform to voice their opinions and ideas?
+	</p>
+	<p>
+		We encourage anyone to contribute. Whether contributions are implemented will depend on the quality of the contribution, not on who's been here the longest. And we'll make sure to make documentation not only for users, but also for developers that don't know where to start in order to help.
+	</p>
+
+	<h2>
+		Why?
+	</h2>
+	<p>
+		Open Source isn't just software, it can be a wonderful community. So instead of competing against each other or wanting to take their place, we want to help them thrive.
+	</p>
+	<p>
+		One lonely ant may not make much of a difference, but through collaboration, they can build amazing things. So why not take their example?
+	</p>
+	<p>
+		Whether you're a developer trying to get through the process to contribute in your community or you just want to make your favorite open source software better known, you can join us. Welcome and good luck :)
+	</p>
+
+	<h2>
+		Our Projects
+	</h2>
+
+	<h3>
+		Alternative Debian website
+	</h3>
+
+	<p>
+		<a href="debianweb.antoss.org">debianweb.antoss.org</a> <br>
+		A Debian website with a more modern design and an open platform for contributors. The Debian distro is great, but the information they provide may be a little outdated or hard to find. We want to provide a clear organization where you can easily find what you're looking for.
+	</p>
+
+	<h3>
+		Coming Soon:
+	</h3>
+	<ul>
+		<li>
+			<strong>Alternative Debian Wiki:</strong> <br>
+			We've heard you and we agree, the Arch wiki is great. We want to make the Debian wiki just as good and complete, starting with a migration to WikiMedia.
+		</li>
+		<li>
+			<strong>The Linux beginner's guide:</strong> <br>
+			Basic things you need to know to get started.
+		</li>
+	</ul>
+
 
 </body>
 </html>
