Did some css format

--- a/index.html
+++ b/index.html
@@ -1,15 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Antoss</title>
+	<link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
-	<h1>
-		Antoss
-	</h1>
+	<header>
+		<ul>
+			<li>
+				<a href="/index.html">ANTOSS</a>
+			</li>
+		</ul>
+	</header>
+
+	<main>
+		<h1>
+			Antoss
+		</h1>
+	<nav>
+		<ul>
+			<li>
+				<a href="#what">What we do</a>
+			</li>
+			<li>
+				<a href="#why">Why we do it</a>
+			</li>
+			<li>
+				<a href="#projects">Our Projects</a>
+			</li>
+		</ul>
+	</nav>
 
 	<p>
 		The Ant Open Source Software is an organization with the goal of making Free Open Source Software (or FOSS) easily available to everyone, no matter their degree of knowledge or experience.
@@ -17,8 +43,9 @@
 		Because what use is having great tools available if only tech experts can use them?
 	</p>
 
+	<section id="what">
 	<h2>
-		What do we do?
+		What we do
 	</h2>
 
 	<h3>
@@ -52,9 +79,11 @@
 	<p>
 		We encourage anyone to contribute. Whether contributions are implemented will depend on the quality of the contribution, not on who's been here the longest. And we'll make sure to make documentation not only for users, but also for developers that don't know where to start in order to help.
 	</p>
+	</section>
 
+	<section id="why">
 	<h2>
-		Why?
+		Why we do it
 	</h2>
 	<p>
 		Open Source isn't just software, it can be a wonderful community. So instead of competing against each other or wanting to take their place, we want to help them thrive.
@@ -65,34 +94,59 @@
 	<p>
 		Whether you're a developer trying to get through the process to contribute in your community or you just want to make your favorite open source software better known, you can join us. Welcome and good luck :)
 	</p>
+	</section>
 
+	<section id="projects">
 	<h2>
 		Our Projects
 	</h2>
 
 	<h3>
-		Alternative Debian website
+		In construction:
 	</h3>
 
+	<h4>
+		Alternative Debian website
+	</h4>
 	<p>
-		<a href="debianweb.antoss.org">debianweb.antoss.org</a> <br>
+		<a href="antdebian.antoss.org">antdebian.antoss.org</a> <br>
+	</p>
+	<p>
 		A Debian website with a more modern design and an open platform for contributors. The Debian distro is great, but the information they provide may be a little outdated or hard to find. We want to provide a clear organization where you can easily find what you're looking for.
 	</p>
+
+	<h4>
+		Hugo Alternative Documentation
+	</h4>
+	<p>
+		<a href="anthugo.antoss.org">anthugo.antoss.org</a> <br>
+	</p>
+	<p>
+		Hugo is a fast and very complete static site generator. One can do so many things with it, but the learning curve is steep, and we believe it's partly due to its current documentation. It's abundantly complete, but at least when we were trying to learn it, the order at which to read the documentation is unclear. We aim to provide a clear learning path, from beginner to expert. All topics will be eventually covered, with nothing skipped, but explained in an easily digestible way that can be understood without already needing to have deep knowledge on the subject.
+	</p>
+
 
 	<h3>
 		Coming Soon:
 	</h3>
-	<ul>
-		<li>
-			<strong>Alternative Debian Wiki:</strong> <br>
-			We've heard you and we agree, the Arch wiki is great. We want to make the Debian wiki just as good and complete, starting with a migration to WikiMedia.
-		</li>
-		<li>
-			<strong>The Linux beginner's guide:</strong> <br>
-			Basic things you need to know to get started.
-		</li>
-	</ul>
 
+	<h4>
+		Alternative Debian Wiki:
+	</h4>
+	<p>
+		We've heard you and we agree, the Arch wiki is great. We want to make the Debian wiki just as good and complete, starting with a migration to WikiMedia.
+	</p>
+
+	<h4>
+		The Linux beginner's guide:
+	</h4>
+	<p>
+		Basic things you need to know to get started.
+	</p>
+
+	</section>
+
+	</main>
 
 </body>
 </html>
